--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,6 +9,7 @@
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
+
   <link rel="stylesheet"  type="text/css" href="/css/styles.min.css">
   <link rel="manifest" href="../manifest.json">
 
@@ -167,9 +168,10 @@
     </footer>
   </div>
 
+<script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
 <script src="/js/mobile-nav.js"></script>
 <script src="/js/navbar.js"></script>
 <script src="/js/index.js"></script>
-<script src="/controllers/index.js"></script>
+
 </body>
 </html>
