--- a/src/public/scss/components/header.scss
+++ b/src/public/scss/components/header.scss
@@ -190,6 +190,16 @@
         }
       }
     }
+    .modal__login-page{
+      background-color: transparent;
+      
+      display: block;
+      top:10%;
+      left:0;
+
+      width: 100%;
+      height: 100%;
+    }
 
     &:hover .modal__button > a {
       color: hsl(28, 80%, 50%);
