--- a/src/views/about.html
+++ b/src/views/about.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="/js/cookie.js"></script>
 
+  
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
   <link rel="stylesheet"  type="text/css" href="/css/styles.min.css">
@@ -64,5 +66,6 @@
   </footer>
 
 <script src="../assets/js/mobile-nav.js"></script>
+
 </body>
 </html>
