--- a/src/views/browse-places.html
+++ b/src/views/browse-places.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#4285f4">
   
+  <script src="/js/cookie.js"></script>
   <link rel="stylesheet"  type="text/css" href="/css/styles.min.css">
   <title>Browse - places</title>
 </head>
