Added github register, small fixes to page rendering and added  account html injection

--- a/src/public/scss/components/header.scss
+++ b/src/public/scss/components/header.scss
@@ -187,6 +187,10 @@
         }
         .list__element--github{
           top:65%;
+          &:hover {
+            cursor: pointer;
+            
+          }
         }
       }
     }
