--- a/src/views/account.html
+++ b/src/views/account.html
@@ -27,7 +27,6 @@
         <li><a href="browse-listings.html">Listings</a></li>
         <li><a href="browse-places.html">Places</a></li>
         <li><a href="account.html">Account</a></li>
-        <li><a href="about.html">About</a></li>
       </ul>
       
      
@@ -54,7 +53,7 @@
         <li><a href="browse-listings.html">Listings</a></li>
         <li><a href="browse-places.html">Places</a></li>
         <li><a href="account.html">Account</a></li>
-        <li><a href="about.html">About</a></li>
+        
       </ul>
     </nav>
   </header>
@@ -63,20 +62,20 @@
     <section class="account">
       <div class="account-container">
         <div class="account__pic">
-          <img src="/images/user-profile-pic.jpg" alt="Profile picture">
+          <img id="profilePicJS" src="/images/user-profile-pic.jpg" alt="Profile picture">
         </div>
 
         <div class="account__details">
           <div class="details__identity">
-            <span class="name"><h2>Jane Doe</h2></span>
+            <span  class="name"><h2 id="nameJS"></h2></span>
 
             <div class="reviews">
               <div class="positive">
-                <span class="count">23</span>
+                <span class="count" id="likesJS"></span>
                 <span class="fa-icon"><i class="fas fa-thumbs-up"></i></span>
               </div>
               <div class="negative">
-                <span class="count">3</span>
+                <span class="count" id="dislikesJS"></span>
                 <span class="fa-icon"><i class="fas fa-thumbs-down"></i></span>
               </div>
             </div>
@@ -154,7 +153,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </footer>
-
+<script src="/js/account.js"></script>
 <script src="/js/mobile-nav.js"></script>
 
 </body>
