--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -12,6 +12,7 @@
 @import "components/add-listing";
 @import "components/account";
 @import "components/place";
+@import "components/login";
 
 html {
   height: 100%;
