--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,7 +9,7 @@
   
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
-
+  
   <link rel="stylesheet"  type="text/css" href="/css/styles.min.css">
   <link rel="manifest" href="../manifest.json">
 
@@ -65,82 +65,7 @@
    
 
     <main class="main-content">
-      <section class="places">
-        <div class="grid--main--page">
-
-          <a href="#" class="grid__item">
-            <article class="card">
-              <div class="card__content">
-                <h2 class="card__title">Carturesti</h2>
-                <ul class="card__content--info">
-                    <li class="card__content--li">Favourite language-Java</li>
-                    <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                </ul>
-              </div>
-
-              <aside class="card__image"></aside>
-            </article>
-          </a>
-
-          <a href="#" class="grid__item">
-            <article class="card">
-              <div class="card__content">
-                <h2 class="card__title">Carturesti</h2>
-                <ul class="card__content--info">
-                    <li class="card__content--li">Favourite language-Java</li>
-                    <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                </ul>
-              </div>
-
-              <aside class="card__image"></aside>
-            </article>
-          </a>
-
-          <a href="#" class="grid__item">
-            <article class="card">
-              <div class="card__content">
-                <h2 class="card__title">Carturesti</h2>
-                <ul class="card__content--info">
-                    <li class="card__content--li">Favourite language-Java</li>
-                    <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                </ul>
-              </div>
-
-              <aside class="card__image"></aside>
-            </article>
-          </a>
-
-          <a href="#" class="grid__item">
-            <article class="card">
-              <div class="card__content">
-                <h2 class="card__title">Carturesti</h2>
-                <ul class="card__content--info">
-                    <li class="card__content--li">Favourite language-Java</li>
-                    <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                </ul>
-              </div>
-
-              <aside class="card__image"></aside>
-            </article>
-          </a>
-
-          <a href="#" class="grid__item">
-            <article class="card">
-              <div class="card__content">
-                <h2 class="card__title">Carturesti</h2>
-                <ul class="card__content--info">
-                    <li class="card__content--li">Favourite language-Java</li>
-                    <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                </ul>
-              </div>
-
-              <aside class="card__image"></aside>
-            </article>
-          </a>
-
-
-        </div>
-      </section>
+        <div class="map" id="map"></div>
       
     </main>
 
@@ -156,6 +81,9 @@
   </div>
 
 </body>
+<script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_5eJJP5kndI_iZuB9duVO_bs5KFCKeCQ&callback=initMap">
+</script>
 <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
 <script src="/js/index.js"></script>
 <script src="/js/mobile-nav.js"></script>
