--- a/src/views/login.html
+++ b/src/views/login.html
@@ -95,7 +95,7 @@
 
 </body>
   <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
-  <script src="/js/index.js"></script>
+  <script src="/js/login.js"></script>
   <script src="/js/mobile-nav.js"></script>
   <script src="/js/navbar.js"></script>
 
