--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
   
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/solid.css" integrity="sha384-uKQOWcYZKOuKmpYpvT0xCFAs/wE157X5Ua3H5onoRAOCNkJAMX/6QF0iXGGQV9cP" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/fontawesome.css" integrity="sha384-HU5rcgG/yUrsDGWsVACclYdzdCcn5yU8V/3V84zSrPDHwZEdjykadlgI6RHrxGrJ" crossorigin="anonymous">
   <link rel="stylesheet"  type="text/css" href="/css/styles.min.css">
   <link rel="manifest" href="../manifest.json">
 
@@ -158,13 +160,13 @@
     </footer>
   </div>
 
+  <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
+  <script src="/js/index.js"></script>
+  <script src="/js/mobile-nav.js"></script>
+  <script src="/js/navbar.js"></script>
+  <script src="/js/login.js"></script>
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_5eJJP5kndI_iZuB9duVO_bs5KFCKeCQ&callback=initMap">
+  </script>
 </body>
-<script async defer
-  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_5eJJP5kndI_iZuB9duVO_bs5KFCKeCQ&callback=initMap">
-</script>
-<script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
-<script src="/js/index.js"></script>
-<script src="/js/mobile-nav.js"></script>
-<script src="/js/navbar.js"></script>
-
 </html>
