--- a/src/views/add-listing.html
+++ b/src/views/add-listing.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#4285f4">
   
-  <script src="/js/cookie.js"></script>
+  
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/solid.css" integrity="sha384-uKQOWcYZKOuKmpYpvT0xCFAs/wE157X5Ua3H5onoRAOCNkJAMX/6QF0iXGGQV9cP" crossorigin="anonymous">
@@ -202,8 +202,7 @@
   </div>
   </main>
   
-<script src="/js/mobile-nav.js"></script>
-<script src="/js/add-listing.js"></script>
+  <script type="module" src="/js/main.js"></script>
 
 </body>
 
