--- a/src/views/index.html
+++ b/src/views/index.html
@@ -161,12 +161,10 @@
   </div>
 
   <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
-  <script src="/js/index.js"></script>
-  <script src="/js/mobile-nav.js"></script>
-  <script src="/js/navbar.js"></script>
-  <script src="/js/login.js"></script>
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_5eJJP5kndI_iZuB9duVO_bs5KFCKeCQ&callback=initMap">
+  <script type="module" src="/js/main.js"></script>
+ 
+  <script id="js-google-maps-api" async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_5eJJP5kndI_iZuB9duVO_bs5KFCKeCQ">
   </script>
 </body>
 </html>
