--- a/src/views/single-listing.html
+++ b/src/views/single-listing.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#4285f4">
   
-  <script src="/js/cookie.js"></script>
+ 
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
 
@@ -66,6 +66,6 @@
     </ul>
   </footer>
   
-<script src="/js/mobile-nav.js"></script>
+  <script type="module" src="/js/main.js"></script>
 </body>
 </html>
