--- a/src/views/account.html
+++ b/src/views/account.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#4285f4">
   <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
-  <script src="/js/cookie.js"></script>
+  
 
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans" rel="stylesheet">
@@ -153,8 +153,7 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </footer>
-<script src="/js/account.js"></script>
-<script src="/js/mobile-nav.js"></script>
+  <script type="module" src="/js/main.js"></script>
 
 </body>
 </html>
