Js refactor fixes

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -163,7 +163,7 @@
   <script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
   <script type="module" src="/js/main.js"></script>
  
-  <script id="js-google-maps-api" async defer
+  <script  async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD_5eJJP5kndI_iZuB9duVO_bs5KFCKeCQ">
   </script>
 </body>
