--- a/src/views/add-listing.html
+++ b/src/views/add-listing.html
@@ -83,7 +83,13 @@
       <section id="implement-secondQuestion" class="form__section hidden">
         <div class="form__section--curentQuestion">Second question</div>
         <h1 class="form__section--h1">Public Study</h1>
-        <p class="form__section--p">The place I am working in is <input type="textarea" class="form__section--input" required>
+        <p class="form__section--p">The place I am working in is 
+            <select>
+                <option value="volvo">Volvo</option>
+                <option value="saab">Saab</option>
+                <option value="opel">Opel</option>
+                <option value="audi">Audi</option>
+              </select>
         </p>
         <div class="form__section--inputWrapper">
           <button type="button" id="next" class="form__section--button">Next</button>
@@ -116,7 +122,7 @@
         <p class="form__section--p"> The skills of the persons that I want to work with me are <input type="textarea" class="form__section--input" required>
         </p>
         <div class="form__section--inputWrapper">
-          <button type="button" id="next" class="form__section--button">Next</button>
+          <button type="button" id="next" class="form__section--button">Submit</button>
           <button type="button" id="back" class="form__section--button">Back</button>
         </div>
       </section>
@@ -159,7 +165,13 @@
           <section id="study-secondQuestion" class="form__section hidden">
             <div class="form__section--curentQuestion">Second question</div>
             <h1 class="form__section--h1">Public Study</h1>
-            <p class="form__section--p">The place I am working in is <input type="textarea" class="form__section--input" required>
+            <p class="form__section--p">The place I am working in is 
+                <select>
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="opel">Opel</option>
+                    <option value="audi">Audi</option>
+                </select>
             </p>
             <div class="form__section--inputWrapper">
                 <button type="button" id="next" class="form__section--button">Next</button>
@@ -192,7 +204,7 @@
             <p class="form__section--p"> The skills of the persons that I want to work with me are <input type="textarea" class="form__section--input" required>
             </p>
             <div class="form__section--inputWrapper">
-                <button type="button" id="next" class="form__section--button">Next</button>
+                <button type="button" id="next" class="form__section--button">Submit</button>
                 <button type="button" id="back" class="form__section--button">Back</button>
             </div>
           </section>
