--- a/src/views/add-listing.html
+++ b/src/views/add-listing.html
@@ -73,10 +73,11 @@
       <section id="implement-firstQuestion" class="form__section  is-visible">
         <div class="form__section--curentQuestion">First question</div>
         <h1 class="form__section--h1">Public Study</h1>
-        <p class="form__section--p">The title of the project is <input type="textarea" class="form__section--input" required>
+        <p class="form__section--p">The title of the project is
+           <input id="js-input-title" type="textarea" class="form__section--input" required>
         </p>
         <div class="form__section--inputWrapper">
-          <button type="button" id="next" class="form__section--button">Next</button>
+          <button type="button" value="title" id="next" class="form__section--button">Next</button>
           <button type="button" id="back" class="form__section--button">Back</button>
         </div>
       </section>
@@ -84,45 +85,44 @@
         <div class="form__section--curentQuestion">Second question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p">The place I am working in is 
-            <select>
-                <option value="volvo">Volvo</option>
-                <option value="saab">Saab</option>
-                <option value="opel">Opel</option>
-                <option value="audi">Audi</option>
+            <select id="js-place-implement">
               </select>
         </p>
         <div class="form__section--inputWrapper">
-          <button type="button" id="next" class="form__section--button">Next</button>
+          <button type="button" value="place" id="next" class="form__section--button">Next</button>
           <button type="button" id="back" class="form__section--button">Back</button>
         </div>
       </section>
       <section id="implement-thirdQuestion" class="form__section hidden">
         <div class="form__section--curentQuestion">Third question</div>
         <h1 class="form__section--h1">Public Study</h1>
-        <p class="form__section--p">The programming language/Framework I am working in is  <input type="textarea" class="form__section--input" required>
+        <p class="form__section--p">The programming language/Framework I am working in is  
+          <input  id="js-input-concept" type="textarea" class="form__section--input" required>
         </p>
         <div class="form__section--inputWrapper">
-          <button type="button" id="next" class="form__section--button">Next</button>
+          <button type="button" value="concept" id="next" class="form__section--button">Next</button>
           <button type="button" id="back" class="form__section--button">Back</button>
         </div>
       </section>
       <section id="implement-fourthQuestion" class="form__section hidden">
         <div class="form__section--curentQuestion">Fourth question</div>
         <h1 class="form__section--h1">Public Study</h1>
-        <p class="form__section--p">My project is  <input type="textarea" class="form__section--input" required>
+        <p class="form__section--p">My project is  
+          <input  id="js-input-description" type="textarea" class="form__section--input" required>
         </p>
         <div class="form__section--inputWrapper">
-          <button type="button" id="next" class="form__section--button">Next</button>
+          <button type="button" value="description" id="next" class="form__section--button">Next</button>
           <button type="button" id="back" class="form__section--button">Back</button>
         </div>
       </section>
       <section id="implement-fifthQuestion" class="form__section hidden">
         <div class="form__section--curentQuestion">Fifth question</div>
         <h1 class="form__section--h1">Public Study</h1>
-        <p class="form__section--p"> The skills of the persons that I want to work with me are <input type="textarea" class="form__section--input" required>
+        <p class="form__section--p"> The skills of the persons that I want to work with me are 
+          <input  id="js-input-skills" type="textarea" class="form__section--input" required>
         </p>
         <div class="form__section--inputWrapper">
-          <button type="button" id="next" class="form__section--button">Submit</button>
+          <button type="button" value="skills" id="next" class="form__section--button">Submit</button>
           <button type="button" id="back" class="form__section--button">Back</button>
         </div>
       </section>
@@ -155,10 +155,11 @@
           <section id="study-firstQuestion" class="form__section  is-visible">
             <div class="form__section--curentQuestion">First question</div>
             <h1 class="form__section--h1">Public Study</h1>
-            <p class="form__section--p">The title of the project is <input type="textarea" class="form__section--input" required>
+            <p class="form__section--p">The title of the project is 
+              <input id="js-input-title"  type="textarea" class="form__section--input" required>
             </p>
             <div class="form__section--inputWrapper">
-                <button type="button" id="next" class="form__section--button">Next</button>
+                <button type="button" id="next" value="title" class="form__section--button">Next</button>
                 <button type="button" id="back" class="form__section--button">Back</button>
             </div>
           </section>
@@ -166,42 +167,42 @@
             <div class="form__section--curentQuestion">Second question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p">The place I am working in is 
-                <select>
-                    <option value="volvo">Volvo</option>
-                    <option value="saab">Saab</option>
-                    <option value="opel">Opel</option>
-                    <option value="audi">Audi</option>
+                <select id="js-place-study">
+                  
                 </select>
             </p>
             <div class="form__section--inputWrapper">
-                <button type="button" id="next" class="form__section--button">Next</button>
+                <button type="button" id="next" value="place" class="form__section--button">Next</button>
                 <button type="button" id="back" class="form__section--button">Back</button>
             </div>
           </section>
           <section id="study-thirdQuestion" class="form__section hidden">
             <div class="form__section--curentQuestion">Third question</div>
             <h1 class="form__section--h1">Public Study</h1>
-            <p class="form__section--p">The concept/tehnology I am studying is <input type="textarea" class="form__section--input" required>
+            <p class="form__section--p">The concept/tehnology I am studying is 
+              <input  id="js-input-concept" type="textarea" class="form__section--input" required>
             </p>
             <div class="form__section--inputWrapper">
-                <button type="button" id="next" class="form__section--button">Next</button>
+                <button type="button" id="next" value="concept" class="form__section--button">Next</button>
                 <button type="button" id="back" class="form__section--button">Back</button>
             </div>
           </section>
           <section id="study-fourthQuestion" class="form__section hidden">
             <div class="form__section--curentQuestion">Fourth question</div>
             <h1 class="form__section--h1">Public Study</h1>
-            <p class="form__section--p">Short Description  <input type="textarea" class="form__section--input" required>
+            <p class="form__section--p">Short Description  
+              <input id="js-input-description" type="textarea" class="form__section--input" required>
             </p>
             <div class="form__section--inputWrapper">
-                <button type="button" id="next" class="form__section--button">Next</button>
+                <button type="button" id="next" value="description" class="form__section--button">Next</button>
                 <button type="button" id="back" class="form__section--button">Back</button>
             </div>
           </section>
           <section id="study-fifthQuestion" class="form__section hidden">
             <div class="form__section--curentQuestion">Fifth question</div>
             <h1 class="form__section--h1">Public Study</h1>
-            <p class="form__section--p"> The skills of the persons that I want to work with me are <input type="textarea" class="form__section--input" required>
+            <p class="form__section--p"> The skills of the persons that I want to work with me are 
+              <input  id="js-input-description" value="skills" type="textarea" class="form__section--input" required>
             </p>
             <div class="form__section--inputWrapper">
                 <button type="button" id="next" class="form__section--button">Submit</button>
