--- a/src/views/add-listing.html
+++ b/src/views/add-listing.html
@@ -74,7 +74,7 @@
         <div class="form__section--curentQuestion">First question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p">The title of the project is
-           <input id="js-input-title" type="textarea" class="form__section--input" required>
+           <input id="js-input-title-implement" type="textarea" class="form__section--input" required>
         </p>
         <div class="form__section--inputWrapper">
           <button type="button" value="title" id="next" class="form__section--button">Next</button>
@@ -85,7 +85,7 @@
         <div class="form__section--curentQuestion">Second question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p">The place I am working in is 
-            <select id="js-place-implement">
+            <select id="js-input-place-implement">
               </select>
         </p>
         <div class="form__section--inputWrapper">
@@ -97,7 +97,7 @@
         <div class="form__section--curentQuestion">Third question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p">The programming language/Framework I am working in is  
-          <input  id="js-input-concept" type="textarea" class="form__section--input" required>
+          <input  id="js-input-concept-implement" type="textarea" class="form__section--input" required>
         </p>
         <div class="form__section--inputWrapper">
           <button type="button" value="concept" id="next" class="form__section--button">Next</button>
@@ -108,7 +108,7 @@
         <div class="form__section--curentQuestion">Fourth question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p">My project is  
-          <input  id="js-input-description" type="textarea" class="form__section--input" required>
+          <input  id="js-input-description-implement" type="textarea" class="form__section--input" required>
         </p>
         <div class="form__section--inputWrapper">
           <button type="button" value="description" id="next" class="form__section--button">Next</button>
@@ -119,7 +119,7 @@
         <div class="form__section--curentQuestion">Fifth question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p"> The skills of the persons that I want to work with me are 
-          <input  id="js-input-skills" type="textarea" class="form__section--input" required>
+          <input  id="js-input-skills-implement" type="textarea" class="form__section--input" required>
         </p>
         <div class="form__section--inputWrapper">
           <button type="button" value="skills" id="next" class="form__section--button">Submit</button>
@@ -156,7 +156,7 @@
             <div class="form__section--curentQuestion">First question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p">The title of the project is 
-              <input id="js-input-title"  type="textarea" class="form__section--input" required>
+              <input id="js-input-title-study"  type="textarea" class="form__section--input" required>
             </p>
             <div class="form__section--inputWrapper">
                 <button type="button" id="next" value="title" class="form__section--button">Next</button>
@@ -167,7 +167,7 @@
             <div class="form__section--curentQuestion">Second question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p">The place I am working in is 
-                <select id="js-place-study">
+                <select id="js-input-place-study">
                   
                 </select>
             </p>
@@ -180,7 +180,7 @@
             <div class="form__section--curentQuestion">Third question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p">The concept/tehnology I am studying is 
-              <input  id="js-input-concept" type="textarea" class="form__section--input" required>
+              <input  id="js-input-concept-study" type="textarea" class="form__section--input" required>
             </p>
             <div class="form__section--inputWrapper">
                 <button type="button" id="next" value="concept" class="form__section--button">Next</button>
@@ -191,7 +191,7 @@
             <div class="form__section--curentQuestion">Fourth question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p">Short Description  
-              <input id="js-input-description" type="textarea" class="form__section--input" required>
+              <input id="js-input-description-study" type="textarea" class="form__section--input" required>
             </p>
             <div class="form__section--inputWrapper">
                 <button type="button" id="next" value="description" class="form__section--button">Next</button>
@@ -202,10 +202,10 @@
             <div class="form__section--curentQuestion">Fifth question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p"> The skills of the persons that I want to work with me are 
-              <input  id="js-input-description" value="skills" type="textarea" class="form__section--input" required>
+              <input  id="js-input-skills-study"  type="textarea" class="form__section--input" required>
             </p>
             <div class="form__section--inputWrapper">
-                <button type="button" id="next" class="form__section--button">Submit</button>
+                <button value="skills" type="button" id="next" class="form__section--button">Submit</button>
                 <button type="button" id="back" class="form__section--button">Back</button>
             </div>
           </section>
