--- a/src/views/login.html
+++ b/src/views/login.html
@@ -94,6 +94,7 @@
   
 
 </body>
+<script src="https://www.gstatic.com/firebasejs/5.7.0/firebase.js"></script>
 <script type="module" src="/js/main.js"></script>
 
 </html>
