Fixed tipo and added error p

--- a/src/views/add-listing.html
+++ b/src/views/add-listing.html
@@ -58,7 +58,7 @@
       </ul>
     </nav>
   </header>
-  
+ 
   <main class="main-content main-content--add-listing">
   <div class="slider" id="js-slider">
     <form class="listing-form " id="js-listing-implement">
@@ -71,6 +71,7 @@
       
       </ul>
       <section id="implement-firstQuestion" class="form__section  is-visible">
+          <p class="error" id="js-error-title-implement"></p>
         <div class="form__section--curentQuestion">First question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p">The title of the project is
@@ -82,6 +83,7 @@
         </div>
       </section>
       <section id="implement-secondQuestion" class="form__section hidden">
+          <p class="error" id="js-error-location-implement"></p>
         <div class="form__section--curentQuestion">Second question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p">The place I am working in is 
@@ -94,6 +96,7 @@
         </div>
       </section>
       <section id="implement-thirdQuestion" class="form__section hidden">
+          <p class="error" id="js-error-concept-implement"></p>
         <div class="form__section--curentQuestion">Third question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p">The programming language/Framework I am working in is  
@@ -105,6 +108,7 @@
         </div>
       </section>
       <section id="implement-fourthQuestion" class="form__section hidden">
+          <p class="error" id="js-error-description-implement"></p>
         <div class="form__section--curentQuestion">Fourth question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p">My project is  
@@ -116,6 +120,7 @@
         </div>
       </section>
       <section id="implement-fifthQuestion" class="form__section hidden">
+          <p class="error" id="js-error-skills-implement"></p>
         <div class="form__section--curentQuestion">Fifth question</div>
         <h1 class="form__section--h1">Public Study</h1>
         <p class="form__section--p"> The skills of the persons that I want to work with me are 
@@ -153,6 +158,7 @@
            
           </ul>
           <section id="study-firstQuestion" class="form__section  is-visible">
+              <p class="error" id="js-error-title-study"></p>
             <div class="form__section--curentQuestion">First question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p">The title of the project is 
@@ -164,6 +170,7 @@
             </div>
           </section>
           <section id="study-secondQuestion" class="form__section hidden">
+              <p class="error" id="js-error-location-study"></p>
             <div class="form__section--curentQuestion">Second question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p">The place I am working in is 
@@ -177,6 +184,7 @@
             </div>
           </section>
           <section id="study-thirdQuestion" class="form__section hidden">
+              <p class="error" id="js-error-concept-study"></p>
             <div class="form__section--curentQuestion">Third question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p">The concept/tehnology I am studying is 
@@ -188,6 +196,7 @@
             </div>
           </section>
           <section id="study-fourthQuestion" class="form__section hidden">
+              <p class="error" id="js-error-description-study"></p>
             <div class="form__section--curentQuestion">Fourth question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p">Short Description  
@@ -199,6 +208,7 @@
             </div>
           </section>
           <section id="study-fifthQuestion" class="form__section hidden">
+              <p class="error" id="js-error-skills-study"></p>
             <div class="form__section--curentQuestion">Fifth question</div>
             <h1 class="form__section--h1">Public Study</h1>
             <p class="form__section--p"> The skills of the persons that I want to work with me are 
