--- a/src/public/scss/components/add-listing.scss
+++ b/src/public/scss/components/add-listing.scss
@@ -1,3 +1,9 @@
+.error{
+  color: red;
+  font-size: 1.5em;
+  width: 100%;
+  text-align: center;
+} 
 .main-content.main-content--add-listing{
   padding-left: 2em;
   padding-top: 2em;
