--- a/src/views/account.html
+++ b/src/views/account.html
@@ -62,7 +62,7 @@
     <section class="account">
       <div class="account-container">
         <div class="account__pic">
-          <img id="profilePicJS" src="/images/user-profile-pic.jpg" alt="Profile picture">
+          <img id="profilePicJS" src="" alt="Profile picture">
         </div>
 
         <div class="account__details">
