--- a/src/public/scss/components/card.scss
+++ b/src/public/scss/components/card.scss
@@ -37,7 +37,7 @@
   .card__content {
     padding: .5em;
     position: absolute;
-    top: 25%;
+    top: 50%;
     left: 50%;
     width: 100%;
     
@@ -48,7 +48,7 @@
     background-color: hsla(0, 50%, 0%, 0.5);
     opacity: 0;
     transition: all .3s ease-in-out;
-    transform: translateX(-50%);
+    transform: translate(-50%,-50%);
 
     .card__title {
       margin-bottom: 0.5em;
@@ -74,45 +74,9 @@
     transition: all .2s ease-in-out;
   }
 
-  &:nth-of-type(1) {
-    .card__image {
-      background: url("../images/carturesti-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
-      background-size: cover;
-    }
-  }
 
-  &:nth-of-type(2) {
     .card__image {
-      background: url("../images/bcu-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
+     
       background-size: cover;
     }
-  }
-
-  &:nth-of-type(3) {
-    .card__image {
-      background: url("../images/college-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
-      background-size: cover;
-    }
-  }
-
-  &:nth-of-type(4) {
-    .card__image {
-      background: url("../images/asachi-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
-      background-size: cover;
-    }
-  }
-
-  &:nth-of-type(5) {
-    .card__image {
-      background: url("../images/fablab-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
-      background-size: cover;
-    }
-  }
-  
-  &:nth-of-type(6) {
-    .card__image {
-      background: url("../images/fablab-medium.jpg") rgba(0, 0, 0, 0.075) center no-repeat;
-      background-size: cover;
-    }
-  }
 }
