--- a/src/public/scss/styles.scss
+++ b/src/public/scss/styles.scss
@@ -72,7 +72,9 @@ html {
 
 .allPlaces {
   padding: 2em 7em;
- 
+  @include query-below($small) {
+  padding: 2em 2em;
+  }
   .grid--twoColumns {
     height: calc(100% - 7em);
 
