--- a/src/views/browse-places.html
+++ b/src/views/browse-places.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="theme-color" content="#4285f4">
-  
 
-  <link rel="stylesheet"  type="text/css" href="/css/styles.min.css">
+
+  <link rel="stylesheet" type="text/css" href="/css/styles.min.css">
   <title>Browse - places</title>
 </head>
+
 <body>
   <header class="header">
     <div class="title">
@@ -22,9 +24,9 @@
         <li><a href="browse-listings.html">Listings</a></li>
         <li><a href="browse-places.html">Places</a></li>
         <li><a href="account.html">Account</a></li>
-        
+
       </ul>
-     
+
     </div>
 
     <div class="mobile-header">
@@ -36,7 +38,7 @@
 
       <h2 class="mobile-title">Public Study</h2>
     </div>
-    
+
     <nav id="js-nav-wrapper" class="mobile-menu-wrapper">
       <button id="js-nav-close" class="menu-close">
         <span class="close"></span>
@@ -55,88 +57,8 @@
 
   <main class="main-content">
     <section class="allPlaces">
-      <div class="grid--twoColumns">
+      <div id="js-places-grid" class="grid--twoColumns">
 
-        <a href="#" class="grid__item">
-          <article class="card">
-            <div class="card__content">
-                  <h2 class="card__title">Carturesti</h2>
-                  <ul class="card__content--info">
-                      <li class="card__content--li">Favourite language-Java</li>
-                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                  </ul>
-            </div>
-            <aside class="card__image"></aside>
-          </article>
-        </a>
-
-        <a href="#" class="grid__item">
-          <article class="card">
-            <div class="card__content">
-                  <h2 class="card__title">Carturesti</h2>
-                  <ul class="card__content--info">
-                      <li class="card__content--li">Favourite language-Java</li>
-                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                  </ul>
-            </div>
-            <aside class="card__image"></aside>
-          </article>
-        </a>
-
-
-        <a href="#" class="grid__item">
-          <article class="card">
-            <div class="card__content">
-                  <h2 class="card__title">Carturesti</h2>
-                  <ul class="card__content--info">
-                      <li class="card__content--li">Favourite language-Java</li>
-                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                  </ul>
-            </div>
-            <aside class="card__image"></aside>
-          </article>
-        </a>
-  
-
-        <a href="#" class="grid__item">
-          <article class="card">
-            <div class="card__content">
-                  <h2 class="card__title">Carturesti</h2>
-                  <ul class="card__content--info">
-                      <li class="card__content--li">Favourite language-Java</li>
-                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                  </ul>
-            </div>
-            <aside class="card__image"></aside>
-          </article>
-        </a>
-    
-
-        <a href="#" class="grid__item">
-          <article class="card">
-            <div class="card__content">
-                  <h2 class="card__title">Carturesti</h2>
-                  <ul class="card__content--info">
-                      <li class="card__content--li">Favourite language-Java</li>
-                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                  </ul>
-            </div>
-            <aside class="card__image"></aside>
-          </article>
-        </a>
-
-        <a href="#" class="grid__item">
-          <article class="card">
-            <div class="card__content">
-                  <h2 class="card__title">Carturesti</h2>
-                  <ul class="card__content--info">
-                      <li class="card__content--li">Favourite language-Java</li>
-                      <li class="card__content--li">Most active colaborator- Gelu Popescu Al Treilea</li>
-                  </ul>
-            </div>
-            <aside class="card__image"></aside>
-          </article>
-        </a>
       </div>
     </section>
   </main>
@@ -150,7 +72,8 @@
       <li><a href="#">Contact</a></li>
     </ul>
   </footer>
-  
+
   <script type="module" src="/js/main.js"></script>
 </body>
+
 </html>
